tests/miniJava/neg/005255_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] 0 ( ) { return 0 ; } }
